버거메뉴 추가
display none

--- a/index.html
+++ b/index.html
@@ -1,55 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <!--font awesome icon link-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <!--source sans font link-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <script
-    src="https://kit.fontawesome.com/44b6891f8f.js"
-    crossorigin="anonymous"
-  ></script>
 
-  <body>
-    <nav class="navbar">
-      <div class="navbar_logo">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+  <!--font awesome icon link-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <!--source sans font link-->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
+</head>
+<script src="https://kit.fontawesome.com/44b6891f8f.js" crossorigin="anonymous"></script>
+
+<body>
+  <nav class="navbar">
+    <div class="navbar_logo">
+      <a href="">
+        <i class="fa-brands fa-unity" style="display: inline"></i>
+        <p style="display: inline">DreamCoding</p>
+      </a>
+    </div>
+
+    <ul class="navbar_menu">
+      <li><a href="">Home</a></li>
+      <li><a href="">Gallery</a></li>
+      <li><a href="">Weddings</a></li>
+      <li><a href="">FAQ</a></li>
+      <li><a href="">Booking</a></li>
+    </ul>
+
+    <ul class="navbar_icons">
+      <li>
         <a href="">
-          <i class="fa-brands fa-unity" style="display: inline"></i>
-          <p style="display: inline">DreamCoding</p>
+          <i class="fa-brands fa-twitter"></i>
         </a>
-      </div>
+      </li>
+      <li>
+        <a href="">
+          <i class="fa-brands fa-twitch"></i>
+        </a>
+      </li>
+    </ul>
+    <i class="fa-solid fa-bars display_none"></i>
+  </nav>
+</body>
 
-      <ul class="navbar_menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Gallery</a></li>
-        <li><a href="">Weddings</a></li>
-        <li><a href="">FAQ</a></li>
-        <li><a href="">Booking</a></li>
-      </ul>
-
-      <ul class="navbar_icons">
-        <li>
-          <a href="">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fa-brands fa-twitch"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </body>
-  
 </html>
