--- a/index.html
+++ b/index.html
@@ -13,39 +13,42 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 </head>
-<script src="https://kit.fontawesome.com/44b6891f8f.js" crossorigin="anonymous"></script>
 
 <body>
   <nav class="navbar">
     <div class="navbar_logo">
-      <a href="">
+      <a href="#">
         <i class="fa-brands fa-unity" style="display: inline"></i>
         <p style="display: inline">DreamCoding</p>
       </a>
     </div>
 
     <ul class="navbar_menu">
-      <li><a href="">Home</a></li>
-      <li><a href="">Gallery</a></li>
-      <li><a href="">Weddings</a></li>
-      <li><a href="">FAQ</a></li>
-      <li><a href="">Booking</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Gallery</a></li>
+      <li><a href="#">Weddings</a></li>
+      <li><a href="#">FAQ</a></li>
+      <li><a href="#">Booking</a></li>
     </ul>
 
     <ul class="navbar_icons">
       <li>
-        <a href="">
+        <a href="#">
           <i class="fa-brands fa-twitter"></i>
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="#">
           <i class="fa-brands fa-twitch"></i>
         </a>
       </li>
     </ul>
-    <i class="fa-solid fa-bars display_none"></i>
+    <a href="#" class="navbar_burgerMenu">
+      <i class="fa-solid fa-bars"></i>
+    </a>
   </nav>
-</body>
 
+</body>
 </html>
+<script src="https://kit.fontawesome.com/44b6891f8f.js" crossorigin="anonymous"></script>
+<script src="app.js"></script>
